# train

./: .deepsource.toml  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  setup.cfg
.github/workflows/: release-macos.yml  release-ubuntu.yml  release-windows.yml  release.yml  tests.yml
bundle/: bundle.spec  win_version_file
tests/: test_main.py  test_math.py
train/: __main__.py  main.py  math.py
