[tool.poetry]
name = "train"
version = "0.1.1"
description = "A Python Sample Project"
license = "Unlicense"
authors = ["Tom Hunze <github@thunze.de>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.10"
pyinstaller = "^4.9"

[tool.poetry.dev-dependencies]
pytest = "^7.0.0"
pytest-cov = "^3.0.0"
coveralls = "^3.3.1"
pre-commit = "^2.17.0"
flake8 = "^4.0.1"
black = "^22.1.0"
mypy = "^0.931"
isort = "^5.10.1"

[tool.coverage.report]
exclude_lines = [
    'if __name__ == .__main__.:'
]

[tool.black]
target-version = ['py310']
include = '\.pyi?$'
exclude = '''
/(
  \.eggs
| \.git
| \.mypy_cache
| \.tox
| \.venv
| build
| dist
)/
'''

[tool.isort]
profile = "black"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
